<resources>
    <string name="app_name">Photo Feed</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_feed">My Feed</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>


    <string name="search">Search</string>
    <string name="pre">Prev</string>
    <string name="next">Next</string>
    <string name="feed">Feed</string>
    <string name="delete">Delete</string>


</resources>
